update register data